==================================================================================================
Changes for 3.4  
==================================================================================================
- Bug Fix (1102): Remove use on unitialized array in daqd rcv build
- Changed method for setting compile options to use Dolphin Gen2 cards and Long Range PCIe.
- Matlab CDS_PARTS updated to use Matlab version 2015b.
- Added run_number server to generate configuration/run numbers for frames.  This is a separate proces
  to prepare for future dual data concentrator work.
- Updating the symmetricom driver to build on kernels from 3.0.8-4.9+.
- Symmetricom driver exposes /proc/gps_offset which can be used to set the appropriate time adjustment
  to handle leap seconds and year changes.
- Bug Fix (1085): Default daqd behavior is to disable md5 checksum file creation
- Bug Fix (1098): Fix EZ_CA_READ/WRITE calls to work with EPICS Sequencer 2.2
- Reduce lockup on model shutdown by removing erroneous printkl() in moduleLoad.c (r4501)
- Added ability to run DAC modules without a preload of the FIFO for lower latency.  This done
  specifically for MIT in RCG V2.8.8, but had not been carried over into RCG V3.x.
- Added support for General Standards 20AO8 DAC module, as was done for branch-3.3 as a test.
- Added auto generation of safe.snap files for models built for the first time.
- Enhancement (793): Changed IPC error reporting
- Added support for Dolphin PCIe network Gen 2 hardware.
*** NOTE: Following disabled in branch-3.4. *********
- Add ability to inter-connect PCIe (Dolphin) switches between corner and end stations.
	- Deletes need for GeFanuc RFM cards. However, option still remains to use them.
	- Added standalone cdsrfmswitch code into src/pcieswitch directory. 
***************************
- Add mx_crc_only process: Required to perform CRC calculations for real-time code when DAQ run
  in a 'standiop' mode.  This is also included in branch-3.0.