@@ -1,6 +1,7 @@
 ==================================================================================================
 Changes for 3.4  
 ==================================================================================================
+- Bug Fix (1112): Add support for Indigo,ANU,UWA,Cardiff site/ifo in feCodeGen.pl
 - Bug Fix (1102): Remove use on unitialized array in daqd rcv build
 - Changed method for setting compile options to use Dolphin Gen2 cards and Long Range PCIe.
 - Matlab CDS_PARTS updated to use Matlab version 2015b.
